# poplang

./: .gitmodules  CMakeLists.txt  Engine.cpp  Engine.h  EngineException.cpp  EngineException.h  Engine_keywords.cpp  Engine_operators.cpp  Lexer.cpp  Lexer.hpp  OperatorHandler.cpp  OperatorHandler.h  README.md  base.cpp  base.hpp  base_common.cpp  base_common.hpp  base_controller.hpp  base_reader.cpp  base_reader.hpp  cpp_channel.cpp  cpp_channel.hpp  default_functions.cpp  expression.hpp  expression_common.cpp  expression_common.hpp  fragment.h  function_registry.hpp  gc.cpp  gc.h  lex.pop.c  lex.yy.c  lexer.lex  main.cpp  operators.cpp  program_flow.cpp  program_flow.hpp  record_constructor.cpp  record_constructor.hpp  seql_executor.cpp  (+9 more)
examples/: arr.pop  array.pop  bracket_result.pop  channel_test.pop  empty_second_arg.pop  fizzbuzz.pop  for_test.pop  fun_test.pop  functions.pop  functions.txt  gc.pop  input.pop  objs.pop  objs.txt  parentheses.pop  ref_test.pop  remote_fun_call.pop  run_tests.py  strcat.txt  strings.pop  tabliczka_mnozenia.pop  tabliczka_mnozenia.txt  test_flow.pop  test_flow.txt  test_gc.pop
tests/: array.pop  functions.pop  parentheses.pop  strcat.pop
